# NekiraECS

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.MD
.github/: CICD.md
.github/workflows/: ci.yml  code-quality.yml  dependencies.yml  documentation.yml  release.yml
Documents/NekiraECSCore/: NekiraECSCore.CN.MD  NekiraECSCore.EN.MD
Documents/README/: README.CN.MD  README.EN.MD
Modules/: CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/Core/Private/: Core.cpp
Modules/Core/Public/: Core.hpp
Modules/Core/cmake/: CoreConfig.cmake.in
cmake/: NekiraECSLibConfig.cmake.in
include/NekiraECS/: CMakeLists.txt
include/NekiraECS/Core/: CMakeLists.txt
include/NekiraECS/Core/Component/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp
include/NekiraECS/Core/Coordinator/: Coordinator.hpp
include/NekiraECS/Core/Entity/: Entity.hpp
include/NekiraECS/Core/Primary/: PrimaryType.hpp
include/NekiraECS/Core/System/: System.hpp  SystemContainer.hpp  SystemGroups.hpp  SystemManager.hpp
include/NekiraECS/Core/Template/: TSingleton.hpp
include/NekiraECS/Tasks/: CMakeLists.txt
include/NekiraECS/Template/: TSingleton.hpp
source/Core/Component/: ComponentManager.cpp
source/Core/Coordinator/: Coordinator.cpp
source/Core/Entity/: Entity.cpp
source/Core/System/: SystemContainer.cpp  SystemManager.cpp
